--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -18,7 +18,7 @@ docker-build:
         --tag $HEROKU_REGISTRY_IMAGE
         --file ./Dockerfile
         "."
-    - docker login -u _ -p $HEROKU_AUTH_TOKEN registry.heroku.com
+    - docker login -u $HEROKU_USER -p $HEROKU_AUTH_TOKEN registry.heroku.com
     - docker push $HEROKU_REGISTRY_IMAGE
     - ls -lsa ./
     - whoami
